[gd_scene load_steps=25 format=4 uid="uid://bm8y3c23tnk0f"]

[ext_resource type="Script" uid="uid://cu34b60ickuu5" path="res://tutorials/tutorial_2.gd" id="1_hxdvl"]
[ext_resource type="Texture2D" uid="uid://cxch0i1mgtrgf" path="res://assets/Tiles/Grass_Middle.png" id="2_h8fsf"]
[ext_resource type="Texture2D" uid="uid://cmr8nlc3uqb1j" path="res://assets/Tiles/Cliff_Tile.png" id="3_oet7r"]
[ext_resource type="Texture2D" uid="uid://c2y7weh11rslu" path="res://assets/Tiles/Path_Tile.png" id="4_euvwd"]
[ext_resource type="FontFile" uid="uid://iublapr1rgpr" path="res://assets/Fonts/EightBitDragon-anqx.ttf" id="5_75y7t"]
[ext_resource type="Texture2D" uid="uid://bdst53ad2vy4" path="res://assets/Outdoor decoration/Outdoor_Decor_Free.png" id="5_oet7r"]
[ext_resource type="Texture2D" uid="uid://c7bofi0b22c6u" path="res://assets/arrow.png" id="6_ateyf"]
[ext_resource type="PackedScene" uid="uid://b6hh4rixs2dfv" path="res://player/player.tscn" id="7_e4dj3"]
[ext_resource type="PackedScene" uid="uid://b38e16u4df4j2" path="res://trees/base_tree.tscn" id="8_80yv5"]
[ext_resource type="PackedScene" uid="uid://butfrm6kcwkfv" path="res://enemy/enemy.tscn" id="10_euvwd"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_oet7r"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yb1ct"]
texture = ExtResource("2_h8fsf")
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_oet7r")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4t6hg"]
texture = ExtResource("3_oet7r")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_euvwd"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_75y7t"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ateyf"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_e4dj3"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7vrqn"]
texture = ExtResource("4_euvwd")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_75y7t")
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
0:5/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_euvwd")
1:5/0 = 0
1:5/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_ateyf")
2:5/0 = 0
2:5/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_e4dj3")

[sub_resource type="TileSet" id="TileSet_ehuit"]
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 7
sources/0 = SubResource("TileSetAtlasSource_yb1ct")
sources/1 = SubResource("TileSetAtlasSource_4t6hg")
sources/2 = SubResource("TileSetAtlasSource_7vrqn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_75y7t"]
texture = ExtResource("5_oet7r")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0

[sub_resource type="TileSet" id="TileSet_ateyf"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_75y7t")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cr88"]
size = Vector2(14.5, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4t6hg"]
size = Vector2(20, 108)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxdvl"]
size = Vector2(20, 89)

[node name="Tutorial2" type="Node2D"]
script = ExtResource("1_hxdvl")

[node name="TutorialBackground" type="TileMapLayer" parent="."]
position = Vector2(0, 1)
tile_map_data = PackedByteArray("AAAAAAAAAgACAAUAAAABAAEAAgABAAUAAAACAAEAAgAAAAUAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAAAAEAAgAAAAUAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAAAAgAAAAUAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAACAAAAAgABAAUAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAAAAAgACAAUAAAADAAEAAgACAAUAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAAAAgACAAUAAAAEAAEAAgACAAUAAAAEAAIAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAAAAgAAAAUAAAAFAAEAAgACAAUAAAAFAAIAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAAAAgACAAUAAAAGAAEAAgABAAUAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAAAAgABAAUAAAAHAAEAAgAAAAUAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAAAAgACAAUAAAAIAAEAAgACAAUAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAAAAgACAAUAAAAJAAEAAgAAAAUAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAAAAgACAAUAAAAKAAEAAgACAAUAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAAAAgABAAUAAAALAAEAAgACAAUAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAAAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAAAAP7/AgAAAAUAAAAAAP//AgABAAUAAAABAP7/AgAAAAUAAAABAP//AgAAAAUAAAACAP7/AgABAAUAAAACAP//AgAAAAUAAAADAP7/AgAAAAUAAAADAP//AgACAAUAAAAEAP7/AgACAAUAAAAEAP//AgABAAUAAAAFAP7/AgAAAAUAAAAFAP//AgACAAUAAAAGAP7/AgACAAUAAAAGAP//AgABAAUAAAAHAP7/AgAAAAUAAAAHAP//AgAAAAUAAAAIAP7/AgAAAAUAAAAIAP//AgAAAAUAAAAJAP7/AgABAAUAAAAJAP//AgAAAAUAAAAKAP7/AgABAAUAAAAKAP//AgABAAUAAAALAP7/AgABAAUAAAALAP//AgABAAUAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAAOAP7/AAAAAAAAAAAOAP//AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP//AAAAAAAAAAAQAP7/AAAAAAAAAAAQAP//AAAAAAAAAAARAP7/AAAAAAAAAAARAP//AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD9/wwAAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAD+/wwAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAATAP7/AAAAAAAAAAATAP//AAAAAAAAAAATAAAAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAAAAAAAAAUAP7/AAAAAAAAAAAUAP//AAAAAAAAAAAUAAAAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAVAP7/AAAAAAAAAAAVAP//AAAAAAAAAAAVAAAAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAWAP7/AAAAAAAAAAAWAP//AAAAAAAAAAAWAAAAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAAwAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAP7/AAAAAAAAAAASAP//AAAAAAAAAAASAAAAAAAAAAAAAAAXAP7/AAAAAAAAAAAXAP//AAAAAAAAAAAXAAAAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAAAAAUAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAIAP3/AgACAAUAAAAKAP3/AgABAAUAAAD2/wcAAQAAAAEAAAD2/wgAAQAAAAIAAAD2/wkAAQAAAAAAAAD2/woAAQAAAAEAAAD2/wsAAQAAAAIAAAD2/wwAAQAAAAAAAAD2/w0AAQAAAAEAAAD2/w4AAQAAAAIAAAD2/w8AAQAAAAAAAAD2/xAAAQAAAAEAAAD2/xEAAQAAAAIAAAD3/wcAAQABAAEAAAD3/wgAAQABAAIAAAD3/wkAAQABAAAAAAD3/woAAQABAAEAAAD3/wsAAQABAAIAAAD3/wwAAQABAAAAAAD3/w0AAQABAAEAAAD3/w4AAQABAAIAAAD3/w8AAQABAAAAAAD3/xAAAQABAAEAAAD3/xEAAQABAAIAAAD4/wcAAQACAAEAAAD4/wgAAQACAAIAAAD4/wkAAQACAAAAAAD4/woAAQACAAEAAAD4/wsAAQACAAIAAAD4/wwAAQACAAAAAAD4/w0AAQACAAEAAAD4/w4AAQACAAIAAAD4/w8AAQACAAAAAAD4/xAAAQACAAEAAAD4/xEAAQACAAIAAAD5/wcAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAAAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAAAAAD5/wwAAAAAAAAAAAD5/w0AAAAAAAAAAAD5/w4AAAAAAAAAAAD5/w8AAQAAAAAAAAD5/xAAAQAAAAEAAAD5/xEAAQAAAAIAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAAD6/wwAAAAAAAAAAAD6/w0AAAAAAAAAAAD6/w4AAAAAAAAAAAD6/w8AAQABAAAAAAD6/xAAAQABAAEAAAD6/xEAAQABAAIAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAAAAAD7/wwAAAAAAAAAAAD7/w0AAAAAAAAAAAD7/w4AAAAAAAAAAAD7/w8AAQACAAAAAAD7/xAAAQACAAEAAAD7/xEAAQACAAIAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD8/wwAAAAAAAAAAAD8/w0AAAAAAAAAAAD8/w4AAAAAAAAAAAD8/w8AAQAAAAAAAAD8/xAAAQAAAAEAAAD8/xEAAQAAAAIAAAD9/w0AAAAAAAAAAAD9/w4AAAAAAAAAAAD9/w8AAQABAAAAAAD9/xAAAQABAAEAAAD9/xEAAQABAAIAAAD+/w0AAAAAAAAAAAD+/w4AAAAAAAAAAAD+/w8AAQACAAAAAAD+/xAAAQACAAEAAAD+/xEAAQACAAIAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAQAAAAAAAAD//xAAAQAAAAEAAAD//xEAAQAAAAIAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAQABAAAAAAAAABAAAQABAAEAAAAAABEAAQABAAIAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAQACAAAAAAABABAAAQACAAEAAAABABEAAQACAAIAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAQAAAAAAAAACABAAAQAAAAEAAAACABEAAQAAAAIAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAQABAAAAAAADABAAAQABAAEAAAADABEAAQABAAIAAAAEAA0AAAAAAAAAAAAEAA4AAAAAAAAAAAAEAA8AAQACAAAAAAAEABAAAQACAAEAAAAEABEAAQACAAIAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAEAAAAFABEAAQAAAAIAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAGAA8AAQABAAAAAAAGABAAAQABAAEAAAAGABEAAQABAAIAAAAHAA0AAAAAAAAAAAAHAA4AAAAAAAAAAAAHAA8AAQACAAAAAAAHABAAAQACAAEAAAAHABEAAQACAAIAAAAIAA0AAAAAAAAAAAAIAA4AAAAAAAAAAAAIAA8AAQAAAAAAAAAIABAAAQAAAAEAAAAIABEAAQAAAAIAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAQABAAAAAAAJABAAAQABAAEAAAAJABEAAQABAAIAAAAKAA0AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAQACAAAAAAAKABAAAQACAAEAAAAKABEAAQACAAIAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAALAA8AAQAAAAAAAAALABAAAQAAAAEAAAALABEAAQAAAAIAAAAMAA0AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAQABAAAAAAAMABAAAQABAAEAAAAMABEAAQABAAIAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAQACAAAAAAANABAAAQACAAEAAAANABEAAQACAAIAAAAOAA0AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA8AAQAAAAAAAAAOABAAAQAAAAEAAAAOABEAAQAAAAIAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAQABAAAAAAAPABAAAQABAAEAAAAPABEAAQABAAIAAAAQAA0AAAAAAAAAAAAQAA4AAAAAAAAAAAAQAA8AAQACAAAAAAAQABAAAQACAAEAAAAQABEAAQACAAIAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAQAAAAAAAAARABAAAQAAAAEAAAARABEAAQAAAAIAAAASAA0AAAAAAAAAAAASAA4AAAAAAAAAAAASAA8AAQABAAAAAAASABAAAQABAAEAAAASABEAAQABAAIAAAATAA0AAAAAAAAAAAATAA4AAAAAAAAAAAATAA8AAQACAAAAAAATABAAAQACAAEAAAATABEAAQACAAIAAAAUAA0AAAAAAAAAAAAUAA4AAAAAAAAAAAAUAA8AAQAAAAAAAAAUABAAAQAAAAEAAAAUABEAAQAAAAIAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAQABAAAAAAAVABAAAQABAAEAAAAVABEAAQABAAIAAAAWAA0AAAAAAAAAAAAWAA4AAAAAAAAAAAAWAA8AAQACAAAAAAAWABAAAQACAAEAAAAWABEAAQACAAIAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAXAA8AAQAAAAAAAAAXABAAAQAAAAEAAAAXABEAAQAAAAIAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA4AAAAAAAAAAAAYAA8AAQABAAAAAAAYABAAAQABAAEAAAAYABEAAQABAAIAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAA0AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA8AAQACAAAAAAAZABAAAQACAAEAAAAZABEAAQACAAIAAAAaAAcAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAoAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAAwAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAQAAAAAAAAAaABAAAQAAAAEAAAAaABEAAQAAAAIAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAQABAAAAAAAbABAAAQABAAEAAAAbABEAAQABAAIAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAAwAAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA8AAQACAAAAAAAcABAAAQACAAEAAAAcABEAAQACAAIAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAQAAAAAAAAAdABAAAQAAAAEAAAAdABEAAQAAAAIAAAAeAAcAAQAAAAEAAAAeAAgAAQAAAAIAAAAeAAkAAQAAAAAAAAAeAAoAAQAAAAEAAAAeAAsAAQAAAAIAAAAeAAwAAQAAAAAAAAAeAA0AAQAAAAEAAAAeAA4AAQAAAAIAAAAeAA8AAQABAAAAAAAeABAAAQABAAEAAAAeABEAAQABAAIAAAD2//n/AQAAAAEAAAD2//r/AQAAAAIAAAD2//v/AQAAAAAAAAD2//z/AQAAAAEAAAD2//3/AQAAAAIAAAD2//7/AQAAAAEAAAD2////AQAAAAIAAAD2/wAAAQAAAAAAAAD2/wEAAgABAAAAAAD2/wIAAgABAAEAAAD2/wMAAgABAAEAAAD2/wQAAgABAAEAAAD2/wUAAgABAAEAAAD2/wYAAgABAAIAAAD3//n/AQABAAEAAAD3//r/AQABAAIAAAD3//v/AQABAAAAAAD3//z/AQABAAEAAAD3//3/AQABAAIAAAD3//7/AQABAAEAAAD3////AQABAAIAAAD3/wAAAQABAAAAAAD3/wEAAgABAAAAAAD3/wIAAgABAAEAAAD3/wMAAgABAAEAAAD3/wQAAgABAAEAAAD3/wUAAgABAAEAAAD3/wYAAgABAAIAAAD4//n/AQACAAEAAAD4//r/AQACAAIAAAD4//v/AQACAAAAAAD4//z/AQACAAEAAAD4//3/AQACAAIAAAD4//7/AQACAAEAAAD4////AQACAAIAAAD4/wAAAQACAAAAAAD4/wEAAgABAAAAAAD4/wIAAgABAAEAAAD4/wMAAgABAAEAAAD4/wQAAgABAAEAAAD4/wUAAgABAAEAAAD4/wYAAgABAAIAAAD5//n/AQAAAAEAAAD5//r/AQAAAAIAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAgABAAAAAAD5/wIAAgABAAEAAAD5/wMAAgABAAEAAAD5/wQAAgABAAEAAAD5/wUAAgABAAEAAAD5/wYAAgABAAIAAAD6//n/AQABAAEAAAD6//r/AQABAAIAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAgABAAAAAAD6/wIAAgABAAEAAAD6/wMAAgABAAEAAAD6/wQAAgABAAEAAAD6/wUAAgABAAEAAAD6/wYAAgABAAIAAAD7//n/AQACAAEAAAD7//r/AQACAAIAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAgABAAAAAAD7/wIAAgABAAEAAAD7/wMAAgABAAEAAAD7/wQAAgABAAEAAAD7/wUAAgABAAEAAAD7/wYAAgABAAIAAAD8//n/AQAAAAEAAAD8//r/AQAAAAIAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAgACAAAAAAD8/wIAAgACAAEAAAD8/wMAAgACAAEAAAD8/wQAAgACAAEAAAD8/wUAAgACAAEAAAD8/wYAAgACAAIAAAD9//n/AQABAAEAAAD9//r/AQABAAIAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAAAAAAAAAD+//n/AQACAAEAAAD+//r/AQACAAIAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+//3/AAAAAAAAAAD///n/AQAAAAEAAAD///r/AQAAAAIAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAAAAAAAAAAAAPn/AQABAAEAAAAAAPr/AQABAAIAAAAAAPv/AgABAAUAAAAAAPz/AgABAAUAAAAAAP3/AgACAAUAAAABAPn/AQACAAEAAAABAPr/AQACAAIAAAABAPv/AgABAAUAAAABAPz/AgACAAUAAAABAP3/AgACAAUAAAACAPn/AQAAAAEAAAACAPr/AQAAAAIAAAACAPv/AgAAAAUAAAACAPz/AgAAAAUAAAACAP3/AgABAAUAAAADAPn/AQABAAEAAAADAPr/AQABAAIAAAADAPv/AgABAAUAAAADAPz/AgABAAUAAAADAP3/AgAAAAUAAAAEAPn/AQACAAEAAAAEAPr/AQACAAIAAAAEAPv/AgABAAUAAAAEAPz/AgACAAUAAAAEAP3/AgABAAUAAAAFAPn/AQAAAAEAAAAFAPr/AQAAAAIAAAAFAPv/AgABAAUAAAAFAPz/AgACAAUAAAAFAP3/AgACAAUAAAAGAPn/AQABAAEAAAAGAPr/AQABAAIAAAAGAPv/AgACAAUAAAAGAPz/AgABAAUAAAAGAP3/AgAAAAUAAAAHAPn/AQACAAEAAAAHAPr/AQACAAIAAAAHAPv/AgACAAUAAAAHAPz/AgACAAUAAAAHAP3/AgAAAAUAAAAIAPn/AQAAAAEAAAAIAPr/AQAAAAIAAAAIAPv/AgACAAUAAAAIAPz/AgACAAUAAAAJAPn/AQABAAEAAAAJAPr/AQABAAIAAAAJAPv/AgABAAUAAAAJAPz/AgACAAUAAAAJAP3/AgACAAUAAAAKAPn/AQACAAEAAAAKAPr/AQACAAIAAAAKAPv/AgABAAUAAAAKAPz/AgACAAUAAAALAPn/AQAAAAEAAAALAPr/AQAAAAIAAAALAPv/AgACAAUAAAALAPz/AgABAAUAAAALAP3/AgABAAUAAAAMAPn/AQABAAEAAAAMAPr/AQABAAIAAAAMAPv/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAANAPn/AQACAAEAAAANAPr/AQACAAIAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAAOAPn/AQAAAAEAAAAOAPr/AQAAAAIAAAAOAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAPAPn/AQABAAEAAAAPAPr/AQABAAIAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAQAPn/AQACAAEAAAAQAPr/AQACAAIAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAARAPn/AQAAAAEAAAARAPr/AQAAAAIAAAARAPv/AAAAAAAAAAARAPz/AAAAAAAAAAARAP3/AAAAAAAAAAASAPn/AQABAAEAAAASAPr/AQABAAIAAAASAPv/AAAAAAAAAAASAPz/AAAAAAAAAAASAP3/AAAAAAAAAAATAPn/AQACAAEAAAATAPr/AQACAAIAAAATAPv/AAAAAAAAAAATAPz/AAAAAAAAAAATAP3/AAAAAAAAAAAUAPn/AQAAAAEAAAAUAPr/AQAAAAIAAAAUAPv/AAAAAAAAAAAUAPz/AAAAAAAAAAAUAP3/AAAAAAAAAAAVAPn/AQABAAEAAAAVAPr/AQABAAIAAAAVAPv/AAAAAAAAAAAVAPz/AAAAAAAAAAAVAP3/AAAAAAAAAAAWAPn/AQACAAEAAAAWAPr/AQACAAIAAAAWAPv/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP3/AAAAAAAAAAAXAPn/AQAAAAEAAAAXAPr/AQAAAAIAAAAXAPv/AAAAAAAAAAAXAPz/AAAAAAAAAAAXAP3/AAAAAAAAAAAYAPn/AQABAAEAAAAYAPr/AQABAAIAAAAYAPv/AAAAAAAAAAAYAPz/AAAAAAAAAAAYAP3/AAAAAAAAAAAZAPn/AQACAAEAAAAZAPr/AQACAAIAAAAZAPv/AAAAAAAAAAAZAPz/AAAAAAAAAAAZAP3/AAAAAAAAAAAaAPn/AQAAAAEAAAAaAPr/AQAAAAIAAAAaAPv/AAAAAAAAAAAaAPz/AAAAAAAAAAAaAP3/AAAAAAAAAAAbAPn/AQABAAEAAAAbAPr/AQABAAIAAAAbAPv/AAAAAAAAAAAbAPz/AAAAAAAAAAAbAP3/AAAAAAAAAAAcAPn/AQACAAEAAAAcAPr/AQACAAIAAAAcAPv/AAAAAAAAAAAcAPz/AAAAAAAAAAAcAP3/AAAAAAAAAAAdAPn/AQAAAAEAAAAdAPr/AQAAAAIAAAAdAPv/AAAAAAAAAAAdAPz/AAAAAAAAAAAdAP3/AAAAAAAAAAAeAPn/AQABAAEAAAAeAPr/AQABAAIAAAAeAPv/AQAAAAAAAAAeAPz/AQAAAAEAAAAeAP3/AQAAAAIAAAAYAP7/AAAAAAAAAAAYAP//AAAAAAAAAAAYAAAAAAAAAAAAAAAZAP7/AAAAAAAAAAAZAP//AAAAAAAAAAAZAAAAAAAAAAAAAAAaAP7/AAAAAAAAAAAaAP//AAAAAAAAAAAaAAAAAAAAAAAAAAAbAP7/AAAAAAAAAAAbAP//AAAAAAAAAAAbAAAAAAAAAAAAAAAcAP7/AAAAAAAAAAAcAP//AAAAAAAAAAAcAAAAAAAAAAAAAAAdAP7/AAAAAAAAAAAdAP//AAAAAAAAAAAdAAAAAAAAAAAAAAAeAP7/AQAAAAAAAAAeAP//AQAAAAEAAAAeAAAAAQAAAAIAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAARAAYAAAAAAAAAAAASAAYAAAAAAAAAAAATAAYAAAAAAAAAAAAUAAYAAAAAAAAAAAAVAAYAAAAAAAAAAAAWAAYAAAAAAAAAAAAZAAEAAgAAAAAAAAAZAAIAAgAAAAEAAAAZAAMAAgAAAAEAAAAZAAQAAgAAAAEAAAAZAAUAAgAAAAEAAAAZAAYAAgAAAAIAAAAaAAEAAgABAAAAAAAaAAIAAgABAAEAAAAaAAMAAgABAAEAAAAaAAQAAgABAAEAAAAaAAUAAgABAAEAAAAaAAYAAgABAAIAAAAbAAEAAgABAAAAAAAbAAIAAgABAAEAAAAbAAMAAgABAAEAAAAbAAQAAgABAAEAAAAbAAUAAgABAAEAAAAbAAYAAgABAAIAAAAcAAEAAgABAAAAAAAcAAIAAgABAAEAAAAcAAMAAgABAAEAAAAcAAQAAgABAAEAAAAcAAUAAgABAAEAAAAcAAYAAgABAAIAAAAdAAEAAgABAAAAAAAdAAIAAgABAAEAAAAdAAMAAgABAAEAAAAdAAQAAgABAAEAAAAdAAUAAgABAAEAAAAdAAYAAgABAAIAAAAeAAEAAgABAAAAAAAeAAIAAgABAAEAAAAeAAMAAgABAAEAAAAeAAQAAgABAAEAAAAeAAUAAgABAAEAAAAeAAYAAgABAAIAAAA=")
tile_set = SubResource("TileSet_ehuit")

[node name="TutorialWalls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///v/AAAAAAMAAAD///z/AAAAAAMAAAD///3/AAAAAAMAAAD///7/AAAAAAMAAAD/////AAAAAAMAAAD//wAAAAAAAAMAAAD//wEAAAAAAAMAAAD//wIAAAAAAAMAAAAAAAIAAAAAAAMAAAABAAIAAAAAAAMAAAACAAIAAAAAAAMAAAADAAIAAAAAAAMAAAAEAAIAAAAAAAMAAAAFAAIAAAAAAAMAAAAGAAIAAAAAAAMAAAAHAAIAAAAAAAMAAAAIAAIAAAAAAAMAAAAJAAIAAAAAAAMAAAAKAAIAAAAAAAMAAAALAAIAAAAAAAMAAAAMAAIAAAAAAAMAAAAMAAEAAAAAAAMAAAAMAAAAAAAAAAMAAAAMAP//AAAAAAMAAAAMAP7/AAAAAAMAAAAMAP3/AAAAAAMAAAAMAPz/AAAAAAMAAAAMAPv/AAAAAAMAAAA=")
tile_set = SubResource("TileSet_ateyf")

[node name="Label" type="Label" parent="."]
offset_left = 29.0
offset_top = 185.0
offset_right = 366.0
offset_bottom = 208.0
theme_override_fonts/font = ExtResource("5_75y7t")
theme_override_font_sizes/font_size = 10
text = "Destruye los arboles antes de que termine el tiempo"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = -204.0
offset_top = 144.0
offset_right = 133.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("5_75y7t")
theme_override_font_sizes/font_size = 10
text = "¡Cuidado con la serpiente!"
horizontal_alignment = 1

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(446, 61)
scale = Vector2(0.169289, 0.107157)
texture = ExtResource("6_ateyf")

[node name="Player" parent="." instance=ExtResource("7_e4dj3")]
position = Vector2(-132, 66)
scale = Vector2(0.7, 0.7)

[node name="BaseTree" parent="." instance=ExtResource("8_80yv5")]
position = Vector2(309, 130)

[node name="BaseTree2" parent="." instance=ExtResource("8_80yv5")]
position = Vector2(316, 4)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(169, 88)
zoom = Vector2(0.418, 0.42)

[node name="LevelArea" type="Area2D" parent="."]
position = Vector2(10, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelArea"]
position = Vector2(489, 65)
shape = SubResource("RectangleShape2D_0cr88")

[node name="Lock" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lock"]
position = Vector2(481, 60)
shape = SubResource("RectangleShape2D_4t6hg")

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(-156, 65.5)
shape = SubResource("RectangleShape2D_hxdvl")

[node name="Enemy" parent="." node_paths=PackedStringArray("player") instance=ExtResource("10_euvwd")]
position = Vector2(39, -46)
player = NodePath("../Player")

[connection signal="body_entered" from="LevelArea" to="." method="_on_level_area_body_entered"]
